fixed spacing

--- a/index.css
+++ b/index.css
@@ -10,7 +10,7 @@ body {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
     display: grid;
-    grid-template-rows: 8% 92%;
+    grid-template-rows: 1% 99%;
     align-items: start;
     background-color:var(--color-background-light-blue);
 }
